<resources>
    <string name="app_name">MyCheckins</string>
    <string name="checkin_title_hint">Enter a title for the check in.</string>
    <string name="checkin_title_label">Title:</string>
    <string name="checkin_place_label">Place:</string>
    <string name="checkin_date_label">Date:</string>
    <string name="checkin_details_label">Details:</string>
    <string name="checkin_location_label">Location</string>
    <string name="checkin_show_map_btn_label">Show Map</string>
    <string name="share_checkin">Share</string>
    <string name="delete_checkin">Delete</string>
    <string name="new_checkin">New Checkin</string>
    <string name="help_checkin">Help</string>
    <string name="date_picker_title">Checkin Date:</string>
    <string name="checkin_summary">
        %1$s!
        %2$sDate: %3$s
        %2$sPlace: %4$s
        %2$sDetails: %5$s
    </string>
    <string name="checkin_summary_subject">MyCheckins Checkin Summary</string>
    <string name="checkin_send_summary">Send Checkin Summary via</string>
    <string name="map_key" translatable="false">
        AIzaSyBVtpBcTuw072wHaqnIFmd4an6O5g9ZVAM
    </string>
</resources>
