<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/checkin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_title_label" />

    <TextView
        android:id="@+id/checkin_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_place_label" />

    <TextView
        android:id="@+id/checkin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_date_label" />

</LinearLayout>