<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/checkin_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="center"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray" />

            <ImageButton
                android:id="@+id/checkin_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin_title_label" />

            <EditText
                android:id="@+id/checkin_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin_title_hint" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_place_label" />

    <EditText
        android:id="@+id/checkin_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_details_label" />

    <EditText
        android:id="@+id/checkin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/checkin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/checkin_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_show_map"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/checkin_show_map_btn_label" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_checkin"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_checkin"/>

</LinearLayout>
